<resources>
    <string name="app_name">Remote-LG</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="scanning">Scanning…</string>
    <string name="select_a_device_to_connect">Select a device to connect</string>
    <string name="text_ok">OK</string>
    <string name="text_volumn">VOL</string>
    <string name="text_ch">CH</string>
    <string name="empty">""</string>
    <string name="text_number_0">0</string>
    <string name="text_number_1">1</string>
    <string name="text_number_2">2</string>
    <string name="text_number_3">3</string>
    <string name="text_number_4">4</string>
    <string name="text_number_5">5</string>
    <string name="text_number_6">6</string>
    <string name="text_number_7">7</string>
    <string name="text_number_8">8</string>
    <string name="text_number_9">9</string>
    <string name="youtube">Youtube</string>
    <string name="netflix">Netflix</string>
    <string name="bbc_news">BBC News</string>
    <string name="fox">Fox</string>
    <string name="itv">iTV</string>
    <string name="hbo">HBO</string>
    <string name="text_upgrade_premium">Upgrade Premium</string>
    <string name="text_upgrade_now">Upgrade now</string>
    <string name="text_connect_your_tv">Connect your TV</string>
    <string name="text_photo">Photo</string>
    <string name="text_video">Video</string>
    <string name="text_Music">Music</string>
    <string name="text_Browser">Browser</string>
    <string name="text_camera">Camera</string>
    <string name="text_gallery">Gallery</string>
    <string name="text_cancel">Cancel</string>
</resources>
