<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/dp_16"
    android:paddingEnd="@dimen/dp_16"
    android:paddingBottom="@dimen/dp_20">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCamera"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_16"
        android:background="@drawable/bg_edit_text"
        android:text="@string/text_camera"
        android:textAllCaps="false"
        android:textSize="@dimen/sp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGallery"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_16"
        android:background="@drawable/bg_edit_text"
        android:text="@string/text_gallery"
        android:textAllCaps="false"
        android:textSize="@dimen/sp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCamera" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_20"
        android:background="@drawable/bg_edit_text"
        android:text="@string/text_cancel"
        android:textAllCaps="false"
        android:textSize="@dimen/sp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGallery" />
</androidx.constraintlayout.widget.ConstraintLayout>
