<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/bgCard"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_125"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:scaleType="fitXY"
        android:src="@drawable/bg_level_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_31"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/text_upgrade_premium"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_16"
        android:background="@drawable/bg_button_gradient"
        android:fontFamily="@font/roboto_bold"
        android:paddingStart="@dimen/dp_10"
        android:paddingEnd="@dimen/dp_10"
        android:text="@string/text_upgrade_now"
        android:textSize="@dimen/sp_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <RelativeLayout
        android:id="@+id/containerShowConnect"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_64"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_24"
        android:layout_marginEnd="@dimen/dp_16"
        android:background="@drawable/bg_edit_text"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bgCard">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/dp_24"
            android:drawableLeft="@drawable/ic_smart_tv"
            android:drawablePadding="@dimen/dp_8"
            android:gravity="center"
            android:text="@string/text_connect_your_tv"
            android:textColor="@android:color/white"
            android:textSize="13dp" />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_32"
        android:layout_marginEnd="@dimen/dp_16"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containerShowConnect"
        app:spanCount="2" />
</androidx.constraintlayout.widget.ConstraintLayout>
